--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,5 +1,24 @@
-.App{
+* {
+  margin: 0;
+  padding: 0;
+}
+.App {
   height: 100vh;
   width: 100vw;
-  background-color: rgb(26, 25, 25);
+  background-color: rgb(46, 45, 45);
+}
+
+.header {
+  height: 180px;
+  width: 100vw;
+
+  border-bottom: 3px solid black;
+}
+.middle {
+  height: 60px;
+  border-bottom: 12px solid rgb(90, 89, 89);
+}
+.actual_contain{
+  height: 500px;
+  border: 3px solid purple;
 }
