--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -15,10 +15,12 @@
   border-bottom: 3px solid black;
 }
 .middle {
-  height: 60px;
+  height: 40px;
   border-bottom: 12px solid rgb(90, 89, 89);
+  text-align: center;
+  margin-top: 20px;
 }
 .actual_contain {
   height: 500px;
-  border: 3px solid purple;
+  /* border: 3px solid purple; */
 }
