--- a/myapp/src/compoents/Header.css
+++ b/myapp/src/compoents/Header.css
@@ -7,6 +7,7 @@
     border: 0.5px solid grey;
     margin-top: 20px;
     float: left;
+    cursor: pointer;
 }
 .icon_contain:hover{
     background-color: rgb(54, 54, 54);
